--- a/24_Day_Statistics/numpy.ipynb
+++ b/24_Day_Statistics/numpy.ipynb
@@ -5,47 +5,57 @@
    "metadata": {},
    "source": [
     "# Numpy\n",
-    "NumPy is the core library for scientific computing in Python. It provices a highh-performance multidimensional array object, and tools for working with arrays."
+    "\n",
+    "NumPy is the core library for scientific computing in Python. It provices a highh-performance multidimensional array object, and tools for working with arrays.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Importing Numpy"
+    "## Importing Numpy\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numpy 1.23.3\n",
+      "['ALLOW_THREADS', 'AxisError', 'BUFSIZE', 'CLIP', 'ComplexWarning', 'DataSource', 'ERR_CALL', 'ERR_DEFAULT', 'ERR_IGNORE', 'ERR_LOG', 'ERR_PRINT', 'ERR_RAISE', 'ERR_WARN', 'FLOATING_POINT_SUPPORT', 'FPE_DIVIDEBYZERO', 'FPE_INVALID', 'FPE_OVERFLOW', 'FPE_UNDERFLOW', 'False_', 'Inf', 'Infinity', 'MAXDIMS', 'MAY_SHARE_BOUNDS', 'MAY_SHARE_EXACT', 'ModuleDeprecationWarning', 'NAN', 'NINF', 'NZERO', 'NaN', 'PINF', 'PZERO', 'RAISE', 'RankWarning', 'SHIFT_DIVIDEBYZERO', 'SHIFT_INVALID', 'SHIFT_OVERFLOW', 'SHIFT_UNDERFLOW', 'ScalarType', 'Tester', 'TooHardError', 'True_', 'UFUNC_BUFSIZE_DEFAULT', 'UFUNC_PYVALS_NAME', 'VisibleDeprecationWarning', 'WRAP', '_CopyMode', '_NoValue', '_UFUNC_API', '__NUMPY_SETUP__', '__all__', '__builtins__', '__cached__', '__config__', '__deprecated_attrs__', '__dir__', '__doc__', '__expired_functions__', '__file__', '__getattr__', '__git_version__', '__loader__', '__name__', '__package__', '__path__', '__spec__', '__version__', '_add_newdoc_ufunc', '_distributor_init', '_financial_names', '_globals', '_mat', '_pyinstaller_hooks_dir', '_pytesttester', '_version', 'abs', 'absolute', 'add', 'add_docstring', 'add_newdoc', 'add_newdoc_ufunc', 'all', 'allclose', 'alltrue', 'amax', 'amin', 'angle', 'any', 'append', 'apply_along_axis', 'apply_over_axes', 'arange', 'arccos', 'arccosh', 'arcsin', 'arcsinh', 'arctan', 'arctan2', 'arctanh', 'argmax', 'argmin', 'argpartition', 'argsort', 'argwhere', 'around', 'array', 'array2string', 'array_equal', 'array_equiv', 'array_repr', 'array_split', 'array_str', 'asanyarray', 'asarray', 'asarray_chkfinite', 'ascontiguousarray', 'asfarray', 'asfortranarray', 'asmatrix', 'atleast_1d', 'atleast_2d', 'atleast_3d', 'average', 'bartlett', 'base_repr', 'binary_repr', 'bincount', 'bitwise_and', 'bitwise_not', 'bitwise_or', 'bitwise_xor', 'blackman', 'block', 'bmat', 'bool8', 'bool_', 'broadcast', 'broadcast_arrays', 'broadcast_shapes', 'broadcast_to', 'busday_count', 'busday_offset', 'busdaycalendar', 'byte', 'byte_bounds', 'bytes0', 'bytes_', 'c_', 'can_cast', 'cast', 'cbrt', 'cdouble', 'ceil', 'cfloat', 'char', 'character', 'chararray', 'choose', 'clip', 'clongdouble', 'clongfloat', 'column_stack', 'common_type', 'compare_chararrays', 'compat', 'complex128', 'complex64', 'complex_', 'complexfloating', 'compress', 'concatenate', 'conj', 'conjugate', 'convolve', 'copy', 'copysign', 'copyto', 'core', 'corrcoef', 'correlate', 'cos', 'cosh', 'count_nonzero', 'cov', 'cross', 'csingle', 'ctypeslib', 'cumprod', 'cumproduct', 'cumsum', 'datetime64', 'datetime_as_string', 'datetime_data', 'deg2rad', 'degrees', 'delete', 'deprecate', 'deprecate_with_doc', 'diag', 'diag_indices', 'diag_indices_from', 'diagflat', 'diagonal', 'diff', 'digitize', 'disp', 'divide', 'divmod', 'dot', 'double', 'dsplit', 'dstack', 'dtype', 'e', 'ediff1d', 'einsum', 'einsum_path', 'emath', 'empty', 'empty_like', 'equal', 'errstate', 'euler_gamma', 'exp', 'exp2', 'expand_dims', 'expm1', 'extract', 'eye', 'fabs', 'fastCopyAndTranspose', 'fft', 'fill_diagonal', 'find_common_type', 'finfo', 'fix', 'flatiter', 'flatnonzero', 'flexible', 'flip', 'fliplr', 'flipud', 'float16', 'float32', 'float64', 'float_', 'float_power', 'floating', 'floor', 'floor_divide', 'fmax', 'fmin', 'fmod', 'format_float_positional', 'format_float_scientific', 'format_parser', 'frexp', 'from_dlpack', 'frombuffer', 'fromfile', 'fromfunction', 'fromiter', 'frompyfunc', 'fromregex', 'fromstring', 'full', 'full_like', 'gcd', 'generic', 'genfromtxt', 'geomspace', 'get_array_wrap', 'get_include', 'get_printoptions', 'getbufsize', 'geterr', 'geterrcall', 'geterrobj', 'gradient', 'greater', 'greater_equal', 'half', 'hamming', 'hanning', 'heaviside', 'histogram', 'histogram2d', 'histogram_bin_edges', 'histogramdd', 'hsplit', 'hstack', 'hypot', 'i0', 'identity', 'iinfo', 'imag', 'in1d', 'index_exp', 'indices', 'inexact', 'inf', 'info', 'infty', 'inner', 'insert', 'int0', 'int16', 'int32', 'int64', 'int8', 'int_', 'intc', 'integer', 'interp', 'intersect1d', 'intp', 'invert', 'is_busday', 'isclose', 'iscomplex', 'iscomplexobj', 'isfinite', 'isfortran', 'isin', 'isinf', 'isnan', 'isnat', 'isneginf', 'isposinf', 'isreal', 'isrealobj', 'isscalar', 'issctype', 'issubclass_', 'issubdtype', 'issubsctype', 'iterable', 'ix_', 'kaiser', 'kron', 'lcm', 'ldexp', 'left_shift', 'less', 'less_equal', 'lexsort', 'lib', 'linalg', 'linspace', 'little_endian', 'load', 'loadtxt', 'log', 'log10', 'log1p', 'log2', 'logaddexp', 'logaddexp2', 'logical_and', 'logical_not', 'logical_or', 'logical_xor', 'logspace', 'longcomplex', 'longdouble', 'longfloat', 'longlong', 'lookfor', 'ma', 'mask_indices', 'mat', 'math', 'matmul', 'matrix', 'matrixlib', 'max', 'maximum', 'maximum_sctype', 'may_share_memory', 'mean', 'median', 'memmap', 'meshgrid', 'mgrid', 'min', 'min_scalar_type', 'minimum', 'mintypecode', 'mod', 'modf', 'moveaxis', 'msort', 'multiply', 'nan', 'nan_to_num', 'nanargmax', 'nanargmin', 'nancumprod', 'nancumsum', 'nanmax', 'nanmean', 'nanmedian', 'nanmin', 'nanpercentile', 'nanprod', 'nanquantile', 'nanstd', 'nansum', 'nanvar', 'nbytes', 'ndarray', 'ndenumerate', 'ndim', 'ndindex', 'nditer', 'negative', 'nested_iters', 'newaxis', 'nextafter', 'nonzero', 'not_equal', 'numarray', 'number', 'obj2sctype', 'object0', 'object_', 'ogrid', 'oldnumeric', 'ones', 'ones_like', 'os', 'outer', 'packbits', 'pad', 'partition', 'percentile', 'pi', 'piecewise', 'place', 'poly', 'poly1d', 'polyadd', 'polyder', 'polydiv', 'polyfit', 'polyint', 'polymul', 'polynomial', 'polysub', 'polyval', 'positive', 'power', 'printoptions', 'prod', 'product', 'promote_types', 'ptp', 'put', 'put_along_axis', 'putmask', 'quantile', 'r_', 'rad2deg', 'radians', 'random', 'ravel', 'ravel_multi_index', 'real', 'real_if_close', 'rec', 'recarray', 'recfromcsv', 'recfromtxt', 'reciprocal', 'record', 'remainder', 'repeat', 'require', 'reshape', 'resize', 'result_type', 'right_shift', 'rint', 'roll', 'rollaxis', 'roots', 'rot90', 'round', 'round_', 'row_stack', 's_', 'safe_eval', 'save', 'savetxt', 'savez', 'savez_compressed', 'sctype2char', 'sctypeDict', 'sctypes', 'searchsorted', 'select', 'set_numeric_ops', 'set_printoptions', 'set_string_function', 'setbufsize', 'setdiff1d', 'seterr', 'seterrcall', 'seterrobj', 'setxor1d', 'shape', 'shares_memory', 'short', 'show_config', 'sign', 'signbit', 'signedinteger', 'sin', 'sinc', 'single', 'singlecomplex', 'sinh', 'size', 'sometrue', 'sort', 'sort_complex', 'source', 'spacing', 'split', 'sqrt', 'square', 'squeeze', 'stack', 'std', 'str0', 'str_', 'string_', 'subtract', 'sum', 'swapaxes', 'sys', 'take', 'take_along_axis', 'tan', 'tanh', 'tensordot', 'test', 'testing', 'tile', 'timedelta64', 'trace', 'tracemalloc_domain', 'transpose', 'trapz', 'tri', 'tril', 'tril_indices', 'tril_indices_from', 'trim_zeros', 'triu', 'triu_indices', 'triu_indices_from', 'true_divide', 'trunc', 'typecodes', 'typename', 'ubyte', 'ufunc', 'uint', 'uint0', 'uint16', 'uint32', 'uint64', 'uint8', 'uintc', 'uintp', 'ulonglong', 'unicode_', 'union1d', 'unique', 'unpackbits', 'unravel_index', 'unsignedinteger', 'unwrap', 'use_hugepage', 'ushort', 'vander', 'var', 'vdot', 'vectorize', 'version', 'void', 'void0', 'vsplit', 'vstack', 'warnings', 'where', 'who', 'zeros', 'zeros_like']\n"
+     ]
+    }
+   ],
    "source": [
     "# How to import numpy\n",
     "import numpy as np\n",
     "# How to check the version of the numpy package\n",
     "print('numpy', np.__version__)\n",
     "# Checking the avaiable methods\n",
-    "print(dir(np))"
+    "print(dir(np))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating numpy array using"
+    "## Creating numpy array using\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating int numpy arrays"
+    "### Creating int numpy arrays\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -62,34 +72,35 @@
    ],
    "source": [
     "# Creating python List\n",
-    "python_list = [1,2,3,4,5]\n",
+    "python_list = [1, 2, 3, 4, 5]\n",
     "\n",
     "# Checking data types\n",
-    "print('Type:', type (python_list)) # <class 'list'>\n",
-    "print(python_list) # [1, 2, 3, 4, 5]\n",
+    "print('Type:', type(python_list))  # <class 'list'>\n",
+    "print(python_list)  # [1, 2, 3, 4, 5]\n",
     "\n",
-    "two_dimensional_list = [[0,1,2], [3,4,5], [6,7,8]]\n",
+    "two_dimensional_list = [[0, 1, 2], [3, 4, 5], [6, 7, 8]]\n",
     "\n",
     "print(two_dimensional_list)  # [[0, 1, 2], [3, 4, 5], [6, 7, 8]]\n",
     "\n",
     "# Creating Numpy(Numerical Python) array from python list\n",
     "\n",
     "numpy_array_from_list = np.array(python_list)\n",
-    "print(type (numpy_array_from_list))   # <class 'numpy.ndarray'>\n",
-    "print(numpy_array_from_list) # array([1, 2, 3, 4, 5])"
+    "print(type(numpy_array_from_list))   # <class 'numpy.ndarray'>\n",
+    "print(numpy_array_from_list)  # array([1, 2, 3, 4, 5])\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating int numpy arrays\n",
-    "Creating a float numpy array from list with a float data type parameter"
+    "### Creating float numpy arrays\n",
+    "\n",
+    "Creating a float numpy array from list with a float data type parameter\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -102,10 +113,10 @@
    ],
    "source": [
     "# Python list\n",
-    "python_list = [1,2,3,4,5]\n",
+    "python_list = [1, 2, 3, 4, 5]\n",
     "\n",
     "numy_array_from_list2 = np.array(python_list, dtype=float)\n",
-    "print(numy_array_from_list2) # array([1., 2., 3., 4., 5.])"
+    "print(numy_array_from_list2)  # array([1., 2., 3., 4., 5.])\n"
    ]
   },
   {
@@ -113,12 +124,13 @@
    "metadata": {},
    "source": [
     "### Creating boolean numpy arrays\n",
-    "Creating a boolean a numpy array from list"
+    "\n",
+    "Creating a boolean a numpy array from list\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +143,7 @@
    ],
    "source": [
     "numpy_bool_array = np.array([0, 1, -1, 0, 0], dtype=bool)\n",
-    "print(numpy_bool_array) # array([False,  True,  True, False, False])"
+    "print(numpy_bool_array)  # array([False,  True,  True, False, False])\n"
    ]
   },
   {
@@ -139,12 +151,13 @@
    "metadata": {},
    "source": [
     "### Creating multidimensional array using numpy\n",
-    "A numpy array may have one or multiple rows and columns"
+    "\n",
+    "A numpy array may have one or multiple rows and columns\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -159,10 +172,213 @@
     }
    ],
    "source": [
-    "two_dimensional_list = [[0,1,2], [3,4,5], [6,7,8]]\n",
+    "two_dimensional_list = [[0, 1, 2], [3, 4, 5], [6, 7, 8]]\n",
     "numpy_two_dimensional_list = np.array(two_dimensional_list)\n",
-    "print(type (numpy_two_dimensional_list))\n",
-    "print(numpy_two_dimensional_list)"
+    "print(type(numpy_two_dimensional_list))\n",
+    "print(numpy_two_dimensional_list)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating numpy array to list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "one dimensional array: [1, 2, 3, 4, 5]\n",
+      "two dimensional array:  [[0, 1, 2], [3, 4, 5], [6, 7, 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can always convert an array back to a python list using tolist().\n",
+    "np_to_list = numpy_array_from_list.tolist()\n",
+    "print(type(np_to_list))\n",
+    "print('one dimensional array:', np_to_list)\n",
+    "print('two dimensional array: ', numpy_two_dimensional_list.tolist())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating numpy array from tuple\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "python_tuple:  (1, 2, 3, 4, 5)\n",
+      "<class 'numpy.ndarray'>\n",
+      "numpy_array_from_tuple:  [1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Numpy array from tuple\n",
+    "# Creating tuple in Python\n",
+    "python_tuple = (1, 2, 3, 4, 5)\n",
+    "print(type(python_tuple))  # <class 'tuple'>\n",
+    "print('python_tuple: ', python_tuple)  # python_tuple:  (1, 2, 3, 4, 5)\n",
+    "\n",
+    "numpy_array_from_tuple = np.array(python_tuple)\n",
+    "print(type(numpy_array_from_tuple))  # <class 'numpy.ndarray'>\n",
+    "# numpy_array_from_tuple:  [1 2 3 4 5]\n",
+    "print('numpy_array_from_tuple: ', numpy_array_from_tuple)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Shape of numpy array\n",
+    "\n",
+    "The shape method provide the shape of the array as a tuple. The first is the row and the second is the column. If the array is just one dimensional it returns the size of the array.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n",
+      "<class 'numpy.ndarray'>\n",
+      "shape of nums:  (5,)\n",
+      "[[0 1 2]\n",
+      " [3 4 5]\n",
+      " [6 7 8]]\n",
+      "shape of numpy_two_dimensional_list:  (3, 3)\n",
+      "(3, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = np.array([1, 2, 3, 4, 5])\n",
+    "print(nums)\n",
+    "print(type(nums))\n",
+    "print('shape of nums: ', nums.shape)\n",
+    "print(numpy_two_dimensional_list)\n",
+    "print('shape of numpy_two_dimensional_list: ',\n",
+    "      numpy_two_dimensional_list.shape)\n",
+    "three_by_four_array = np.array([\n",
+    "    [0, 1, 2, 3],\n",
+    "    [4, 5, 6, 7],\n",
+    "    [8, 9, 10, 11]\n",
+    "])\n",
+    "print(three_by_four_array.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data type of numpy array\n",
+    "\n",
+    "Type of data types: str, int, float, complex, bool, list, None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-3 -2 -1  0  1  2  3]\n",
+      "int32\n",
+      "[-3. -2. -1.  0.  1.  2.  3.]\n",
+      "float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "int_lists = [-3, -2, -1, 0, 1, 2, 3]\n",
+    "int_array = np.array(int_lists)\n",
+    "float_array = np.array(int_lists, dtype=float)\n",
+    "\n",
+    "print(int_array)\n",
+    "print(int_array.dtype)\n",
+    "print(float_array)\n",
+    "print(float_array.dtype)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Size of a numpy array\n",
+    "\n",
+    "In numpy to know the number of items in a numpy array list we use size\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The size: 5\n",
+      "The size: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "numpy_array_from_list = np.array([1, 2, 3, 4, 5])\n",
+    "two_dimensional_list = np.array([[0, 1, 2],\n",
+    "                                 [3, 4, 5],\n",
+    "                                 [6, 7, 8]])\n",
+    "\n",
+    "print('The size:', numpy_array_from_list.size)  # 5\n",
+    "print('The size:', two_dimensional_list.size)  # 3\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mathematical Operation using numpy\n",
+    "\n",
+    "NumPy array is not like exactly like python list. To do mathematical operation in Python list we have to looop through the items but numpy can allow to do any mathematical operation without looping. Mathematical Operation:\n",
+    "\n",
+    "-Addition (+)\n",
+    "\n",
+    "-Subtraction (-)\n",
+    "\n",
+    "-Multiplication (*)\n",
+    "\n",
+    "-Division (/)\n",
+    "\n",
+    "-Modules (%)\n",
+    "\n",
+    "-Floor Division(//)\n",
+    "\n",
+    "-Exponential(**)"
    ]
   }
  ],
