Added mathematical operation in numpy

--- a/24_Day_Statistics/numpy.ipynb
+++ b/24_Day_Statistics/numpy.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -130,19 +130,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[False  True  True False False]\n"
+      "[False  True  True False  True]\n"
      ]
     }
    ],
    "source": [
-    "numpy_bool_array = np.array([0, 1, -1, 0, 0], dtype=bool)\n",
+    "numpy_bool_array = np.array([0, 1, -1, 0, 9], dtype=bool)\n",
     "print(numpy_bool_array)  # array([False,  True,  True, False, False])\n"
    ]
   },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -379,6 +379,224 @@
     "-Floor Division(//)\n",
     "\n",
     "-Exponential(\\*\\*)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Addition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original array:  [1 2 3 4 5]\n",
+      "[11 12 13 14 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mathematical Operation\n",
+    "# Addition\n",
+    "numpy_array_from_list = np.array([1, 2, 3, 4, 5])\n",
+    "print('original array: ', numpy_array_from_list)\n",
+    "ten_plus_original = numpy_array_from_list  + 10\n",
+    "print(ten_plus_original)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Substraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original array:  [1 2 3 4 5]\n",
+      "[-9 -8 -7 -6 -5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Subtraction\n",
+    "numpy_array_from_list = np.array([1, 2, 3, 4, 5])\n",
+    "print('original array: ', numpy_array_from_list)\n",
+    "ten_minus_original = numpy_array_from_list  - 10\n",
+    "print(ten_minus_original)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multiplication"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original array:  [1 2 3 4 5]\n",
+      "[10 20 30 40 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Multiplication\n",
+    "numpy_array_from_list = np.array([1, 2, 3, 4, 5])\n",
+    "print('original array: ', numpy_array_from_list)\n",
+    "ten_times_original = numpy_array_from_list * 10\n",
+    "print(ten_times_original)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Division"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original array:  [1 2 3 4 5]\n",
+      "[0.1 0.2 0.3 0.4 0.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Division\n",
+    "numpy_array_from_list = np.array([1, 2, 3, 4, 5])\n",
+    "print('original array: ', numpy_array_from_list)\n",
+    "ten_times_original = numpy_array_from_list / 10\n",
+    "print(ten_times_original)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modulus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original array:  [1 2 3 4 5]\n",
+      "[1 2 0 1 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Modulus; Finding the remainder\n",
+    "numpy_array_from_list = np.array([1, 2, 3, 4, 5])\n",
+    "print('original array: ', numpy_array_from_list)\n",
+    "ten_times_original = numpy_array_from_list % 3\n",
+    "print(ten_times_original)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Floor Division"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original array:  [1 2 3 4 5]\n",
+      "[0 0 0 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Floor division: the division result without the remainder\n",
+    "numpy_array_from_list = np.array([1, 2, 3, 4, 5])\n",
+    "print('original array: ', numpy_array_from_list)\n",
+    "ten_times_original = numpy_array_from_list // 10\n",
+    "print(ten_times_original)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exponential"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original array:  [1 2 3 4 5]\n",
+      "[ 1  4  9 16 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exponential is finding some number the power of another:\n",
+    "numpy_array_from_list = np.array([1, 2, 3, 4, 5])\n",
+    "print('original array: ', numpy_array_from_list)\n",
+    "ten_times_original = numpy_array_from_list  ** 2\n",
+    "print(ten_times_original)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Checking data types"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##"
    ]
   }
  ],
