Added multi-deminesional arrays

--- a/24_Day_Statistics/numpy.ipynb
+++ b/24_Day_Statistics/numpy.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
        "array([1., 2., 3., 4.])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
        "array([1, 2, 3, 4])"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
        "array([ True,  True, False,  True,  True,  True])"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
        "array(['1', '2', '3', '4'], dtype='<U11')"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,6 +747,132 @@
    "metadata": {},
    "source": [
     "## Multi-dimensional Arrays\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "Shape:  (3, 3)\n",
+      "Size: 9\n",
+      "Data type: int32\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2 Dimension Array\n",
+    "two_dimension_array = np.array([(1,2,3),(4,5,6), (7,8,9)])\n",
+    "print(type (two_dimension_array))\n",
+    "print(two_dimension_array)\n",
+    "print('Shape: ', two_dimension_array.shape)\n",
+    "print('Size:', two_dimension_array.size)\n",
+    "print('Data type:', two_dimension_array.dtype)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Getting items from a numpy array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First row: [1 2 3]\n",
+      "Second row: [4 5 6]\n",
+      "Third row:  [7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2 Dimension Array\n",
+    "two_dimension_array = np.array([[1,2,3],[4,5,6], [7,8,9]])\n",
+    "first_row = two_dimension_array[0]\n",
+    "second_row = two_dimension_array[1]\n",
+    "third_row = two_dimension_array[2]\n",
+    "print('First row:', first_row)\n",
+    "print('Second row:', second_row)\n",
+    "print('Third row: ', third_row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First column: [1 4 7]\n",
+      "Second column: [2 5 8]\n",
+      "Third column:  [3 6 9]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_column= two_dimension_array[:,0]\n",
+    "second_column = two_dimension_array[:,1]\n",
+    "third_column = two_dimension_array[:,2]\n",
+    "print('First column:', first_column)\n",
+    "print('Second column:', second_column)\n",
+    "print('Third column: ', third_column)\n",
+    "print(two_dimension_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First column: [1 4 7]\n",
+      "Second column: [2 5 8]\n",
+      "Third column:  [3 6 9]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_column= two_dimension_array[:,0]\n",
+    "second_column = two_dimension_array[:,1]\n",
+    "third_column = two_dimension_array[:,2]\n",
+    "print('First column:', first_column)\n",
+    "print('Second column:', second_column)\n",
+    "print('Third column: ', third_column)\n",
+    "print(two_dimension_array)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Slicing Numpy array\n",
     "***"
    ]
   }
