--- a/24_Day_Statistics/numpy.ipynb
+++ b/24_Day_Statistics/numpy.ipynb
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,10 @@
      "text": [
       "First row: [1 2 3]\n",
       "Second row: [4 5 6]\n",
-      "Third row:  [7 8 9]\n"
+      "Third row:  [7 8 9]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
      ]
     }
    ],
@@ -809,12 +812,13 @@
     "third_row = two_dimension_array[2]\n",
     "print('First row:', first_row)\n",
     "print('Second row:', second_row)\n",
-    "print('Third row: ', third_row)"
+    "print('Third row: ', third_row)\n",
+    "print(two_dimension_array)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -838,34 +842,6 @@
     "print('Second column:', second_column)\n",
     "print('Third column: ', third_column)\n",
     "print(two_dimension_array)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "First column: [1 4 7]\n",
-      "Second column: [2 5 8]\n",
-      "Third column:  [3 6 9]\n",
-      "[[1 2 3]\n",
-      " [4 5 6]\n",
-      " [7 8 9]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "first_column= two_dimension_array[:,0]\n",
-    "second_column = two_dimension_array[:,1]\n",
-    "third_column = two_dimension_array[:,2]\n",
-    "print('First column:', first_column)\n",
-    "print('Second column:', second_column)\n",
-    "print('Third column: ', third_column)\n",
-    "print(two_dimension_array)\n"
    ]
   },
   {
