--- a/24_Day_Statistics/numpy.ipynb
+++ b/24_Day_Statistics/numpy.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
        "array([1., 2., 3., 4.])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
        "array([1, 2, 3, 4])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
        "array([ True,  True, False,  True,  True,  True])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
        "array(['1', '2', '3', '4'], dtype='<U11')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -850,6 +850,92 @@
    "source": [
     "## Slicing Numpy array\n",
     "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Slicing in numpy is similar to slicing in python list:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [4 5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "three_dimension_array = np.array([[1,2,3],[4,5,6], [7,8,9]])\n",
+    "first_two_rows_and_columns = three_dimension_array[0:2, 0:2]\n",
+    "print(first_two_rows_and_columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How to reverse the rows and the whole array?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[7, 8, 9],\n",
+       "       [4, 5, 6],\n",
+       "       [1, 2, 3]])"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_dimension_array[::-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reverse the row and column positions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[9, 8, 7],\n",
+       "       [6, 5, 4],\n",
+       "       [3, 2, 1]])"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_dimension_array = np.array([[1,2,3],[4,5,6], [7,8,9]])\n",
+    "two_dimension_array[::-1,::-1]"
    ]
   }
  ],
