Numpy represent missing values

--- a/24_Day_Statistics/numpy.ipynb
+++ b/24_Day_Statistics/numpy.ipynb
@@ -937,6 +937,192 @@
     "two_dimension_array = np.array([[1,2,3],[4,5,6], [7,8,9]])\n",
     "two_dimension_array[::-1,::-1]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How to represent missing values?\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3]\n",
+      " [ 4 55 44]\n",
+      " [ 7  8  9]]\n",
+      "[[ 1  2  3]\n",
+      " [ 4 55 44]\n",
+      " [ 7  8  9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(two_dimension_array)\n",
+    "two_dimension_array[1,1] = 55\n",
+    "two_dimension_array[1,2] = 44\n",
+    "print(two_dimension_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0],\n",
+       "       [0, 0, 0],\n",
+       "       [0, 0, 0]])"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Numpy Zeroes\n",
+    "# numpy.zeros(shape, dtype=float, order='C')\n",
+    "numpy_zeroes = np.zeros((3,3),dtype=int,order='C')\n",
+    "numpy_zeroes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 1 1]\n",
+      " [1 1 1]\n",
+      " [1 1 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Numpy Zeroes\n",
+    "numpy_ones = np.ones((3,3),dtype=int,order='C')\n",
+    "print(numpy_ones)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 2 2]\n",
+      " [2 2 2]\n",
+      " [2 2 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "twoes = numpy_ones * 2\n",
+    "print(twoes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reshape\n",
+    "# numpy.reshape(), numpy.flatten()\n",
+    "first_shape  = np.array([(1,2,3), (4,5,6)])\n",
+    "print(first_shape)\n",
+    "reshaped = first_shape.reshape(3,2)\n",
+    "print(reshaped)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "flattened = reshaped.flatten()\n",
+    "print(flattened)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 7 9]\n",
+      "Horizontal Append: [1 2 3 4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Horitzontal Stack\n",
+    "np_list_one = np.array([1,2,3])\n",
+    "np_list_two = np.array([4,5,6])\n",
+    "\n",
+    "print(np_list_one + np_list_two)\n",
+    "\n",
+    "print('Horizontal Append:', np.hstack((np_list_one, np_list_two)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vertical Append: [[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Vertical Stack\n",
+    "print('Vertical Append:', np.vstack((np_list_one, np_list_two)))"
+   ]
   }
  ],
  "metadata": {
