Numpy added sequence of numbers using linspace

--- a/24_Day_Statistics/numpy.ipynb
+++ b/24_Day_Statistics/numpy.ipynb
@@ -1545,6 +1545,190 @@
     "even_numbers = np.arange(2, 20, 2)\n",
     "even_numbers"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating sequence of numbers using linspace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.        , 1.44444444, 1.88888889, 2.33333333, 2.77777778,\n",
+       "       3.22222222, 3.66666667, 4.11111111, 4.55555556, 5.        ])"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# numpy.linspace()\n",
+    "# numpy.logspace() in Python with Example\n",
+    "# For instance, it can be used to create 10 values from 1 to 5 evenly spaced.\n",
+    "np.linspace(1.0, 5.0, num=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1. , 1.8, 2.6, 3.4, 4.2])"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# not to include the last value in the interval\n",
+    "np.linspace(1.0, 5.0, num=5, endpoint=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  100.        ,   464.15888336,  2154.43469003, 10000.        ])"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# LogSpace\n",
+    "# LogSpace returns even spaced numbers on a log scale. Logspace has the same parameters as np.linspace.\n",
+    "\n",
+    "# Syntax:\n",
+    "\n",
+    "# numpy.logspace(start, stop, num, endpoint)\n",
+    "\n",
+    "np.logspace(2, 4.0, num=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.+0.j, 2.+0.j, 3.+0.j])"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# to check the size of an array\n",
+    "x = np.array([1,2,3], dtype=np.complex128)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.itemsize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# indexing and Slicing NumPy Arrays in Python\n",
+    "np_list = np.array([(1,2,3), (4,5,6)])\n",
+    "np_list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First row:  [1 2 3]\n",
+      "Second row:  [4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('First row: ', np_list[0])\n",
+    "print('Second row: ', np_list[1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First column:  [1 4]\n",
+      "Second column:  [2 5]\n",
+      "Third column:  [3 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('First column: ', np_list[:,0])\n",
+    "print('Second column: ', np_list[:,1])\n",
+    "print('Third column: ', np_list[:,2])\n"
+   ]
   }
  ],
  "metadata": {
