Numpy added statistical Functions with Example

--- a/24_Day_Statistics/numpy.ipynb
+++ b/24_Day_Statistics/numpy.ipynb
@@ -1729,6 +1729,80 @@
     "print('Second column: ', np_list[:,1])\n",
     "print('Third column: ', np_list[:,2])\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NumPy Statistical Functions with Example\n",
+    "\n",
+    "NumPy has quite useful statistical functions for finding minimum, maximum, mean, median, percentile,standard deviation and variance, etc from the given elements in the array. The functions are explained as follows − Statistical function Numpy is equipped with the robust statistical function as listed below.\n",
+    "\n",
+    "- Numpy Functions\n",
+    "  - Min np.min()\n",
+    "  - Max np.max()\n",
+    "  - Mean np.mean()\n",
+    "  - Median np.median()\n",
+    "  - Varience\n",
+    "  - Percentile\n",
+    "  - Standard deviation np.std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "min:  1\n",
+      "max:  55\n",
+      "mean:  14.777777777777779\n",
+      "sd:  18.913709183069525\n"
+     ]
+    }
+   ],
+   "source": [
+    "np_normal_dis = np.random.normal(5, 0.5, 100)\n",
+    "np_normal_dis\n",
+    "## min, max, mean, median, sd\n",
+    "print('min: ', two_dimension_array.min())\n",
+    "print('max: ', two_dimension_array.max())\n",
+    "print('mean: ',two_dimension_array.mean())\n",
+    "# print('median: ', two_dimension_array.median())\n",
+    "print('sd: ', two_dimension_array.std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3]\n",
+      " [ 4 55 44]\n",
+      " [ 7  8  9]]\n",
+      "Column with minimum:  [1 2 3]\n",
+      "Column with maximum:  [ 7 55 44]\n",
+      "=== Row ==\n",
+      "Row with minimum:  [1 4 7]\n",
+      "Row with maximum:  [ 3 55  9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(two_dimension_array)\n",
+    "print('Column with minimum: ', np.amin(two_dimension_array,axis=0))\n",
+    "print('Column with maximum: ', np.amax(two_dimension_array,axis=0))\n",
+    "print('=== Row ==')\n",
+    "print('Row with minimum: ', np.amin(two_dimension_array,axis=1))\n",
+    "print('Row with maximum: ', np.amax(two_dimension_array,axis=1))"
+   ]
   }
  ],
  "metadata": {
