--- a/25_Day_Pandas/pandas.ipynb
+++ b/25_Day_Pandas/pandas.ipynb
@@ -29,6 +29,207 @@
     "\n",
     "Pandas data structure is based on Series and DataFrames. A series is a column and a DataFrame is a multidimensional table made up of collection of series. In order to create a pandas series we should use numpy to create a one dimensional arrays or a python list. Let us see an example of a series:"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing Pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd # importing pandas as pd\n",
+    "import numpy  as np # importing numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating Pandas Series with Default Index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    1\n",
+      "1    2\n",
+      "2    3\n",
+      "3    4\n",
+      "4    5\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1, 2, 3, 4,5]\n",
+    "s = pd.Series(nums)\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating Pandas Series with custom index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1    1\n",
+      "2    2\n",
+      "3    3\n",
+      "4    4\n",
+      "5    5\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1, 2, 3, 4, 5]\n",
+    "s = pd.Series(nums, index=[1, 2, 3, 4, 5])\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1    Orange\n",
+      "2    Banana\n",
+      "3     Mango\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = ['Orange','Banana','Mango']\n",
+    "fruits = pd.Series(fruits, index=[1, 2, 3])\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating Pandas Series from a Dictionary\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dct = {'name':'Ruben','country':'Spain','city':'Leon'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name       Ruben\n",
+      "country    Spain\n",
+      "city        Leon\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = pd.Series(dct)\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating a Constant Pandas Series\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1    10\n",
+      "2    10\n",
+      "3    10\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = pd.Series(10, index = [1, 2, 3])\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating a Pandas Series Using Linspace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     5.000000\n",
+      "1     6.666667\n",
+      "2     8.333333\n",
+      "3    10.000000\n",
+      "4    11.666667\n",
+      "5    13.333333\n",
+      "6    15.000000\n",
+      "7    16.666667\n",
+      "8    18.333333\n",
+      "9    20.000000\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = pd.Series(np.linspace(5, 20, 10)) # linspace(starting, end, items)\n",
+    "print(s)"
+   ]
   }
  ],
  "metadata": {
