Add how to create DataFrame in Pandas

--- a/25_Day_Pandas/pandas.ipynb
+++ b/25_Day_Pandas/pandas.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -229,6 +229,110 @@
    "source": [
     "s = pd.Series(np.linspace(5, 20, 10)) # linspace(starting, end, items)\n",
     "print(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DataFrames\n",
+    "***\n",
+    "Pandas data frames can be created in different ways."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating DataFrames from list of lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Names Country       City\n",
+      "0  Ruben   Spain       Leon\n",
+      "1  David      UK     London\n",
+      "2   John  Sweden  Stockholm\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [\n",
+    "    ['Ruben', 'Spain', 'Leon'], \n",
+    "    ['David', 'UK', 'London'],\n",
+    "    ['John', 'Sweden', 'Stockholm']\n",
+    "]\n",
+    "df = pd.DataFrame(data, columns=['Names','Country','City'])\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating DataFrame Using Dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Name  Country       City\n",
+      "0  Asabeneh  Finland    Helsiki\n",
+      "1     David       UK     London\n",
+      "2      John   Sweden  Stockholm\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = {'Name': ['Asabeneh', 'David', 'John'], 'Country':[\n",
+    "    'Finland', 'UK', 'Sweden'], 'City': ['Helsiki', 'London', 'Stockholm']}\n",
+    "df = pd.DataFrame(data)\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating DataFrames from a List of Dictionaries\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Name  Country       City\n",
+      "0  Asabeneh  Finland   Helsinki\n",
+      "1     David       UK     London\n",
+      "2      John   Sweden  Stockholm\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [\n",
+    "    {'Name': 'Asabeneh', 'Country': 'Finland', 'City': 'Helsinki'},\n",
+    "    {'Name': 'David', 'Country': 'UK', 'City': 'London'},\n",
+    "    {'Name': 'John', 'Country': 'Sweden', 'City': 'Stockholm'}]\n",
+    "df = pd.DataFrame(data)\n",
+    "print(df)"
    ]
   }
  ],
